assets/css/custom.scss
/* ... */
/*dashboard*/

.dashboard {
	.subheader {
		background-image: url("/assets/img/headers/about_us.png");
	}
}
/* =============================================
				Internships
================================================ */
.Internships {
	.subheader {
		background-image: url("/assets/img/headers/for_entrepreneurs.png");
	}
	img {
		width: 80%;
		margin-left: 10%;
	}
}

@media (max-width: 1800px) {

	h1.internship {
		font-family: 'open sans';
		font-size: 30px;
		color: #2e2e2e;
		font-weight: 700;
		margin-top: 0px;
		padding-top: 30px;
		text-align: center;
	}
	p.internship {
		font-family: 'open sans';
		font-size: 22px;
		line-height: 30px;
		text-align: center;
		color: #2e2e2e;
		font-weight: 400;
	}
	#i2 a, .ta-apply a {
		font-size: 26px;
		text-align: center;
		font-family: "open sans";
		font-weight: 700;
		padding: 0 10%;
		border-radius: 4px;
	}
	#i2 h3, .ta-apply {
		margin-bottom: 30px;
	}
}

@media (max-width: 1000px) {

	h1.internship {
		font-size: 30px;
	}
	p.internship {
		font-size: 20px;
		line-height: 24px;
	}
	#i2 a, .ta-apply a {
		font-size: 28px;
	}

	section.full-width h2 {
		margin-top: 25px;
	}
}
@media (max-width: 700px) {

	h1.internship {
		font-size: 25px;
	}
	p.internship {
		font-size: 16px;
		line-height: 17px;
	}
	#i2 a, .ta-apply a {
		font-size: 23px;
	}

	section.full-width p, section.full-width ul {
		margin-top: -20px;
	}
}

@media (max-width: 400px) {

	h1.internship {
		font-size: 20px;
	}
	p.internship {
		font-size: 14px;
		line-height: 15px;
	}
	#i2 a, .ta-apply a {
		font-size: 18px;
	}
}

#teams ul {
	padding-left: 55px;
	font-weight: 400;
}

#join {
	padding-bottom: 25px;
}

@media (max-width: 1800px) {
	#teams h2, #who h2, #why h2, #what h2, #join h2 {
		font-size: 33px;
		color: rgb(38, 38, 38);
		font-family: 'open sans';
		font-weight: 600;
	}

	#teams li {
		font-weight: 400;
		font-size: 22px;
		line-height: 36px;
		color: rgb(38, 38, 38);
	}

	#who p, #why p, #what p, #join p {
		font-weight: 400;
		font-size: 18px;
		line-height: 33px;
		color: rgb(38, 38, 38);
	}

	#what p, #join p {
		text-align: justify;
	}

	// #teams img, #who img, #what img, #join img {
	// 	width: 100%;
	// 	height: 100%;
	// 	margin-top: 20px;
	// }

	// #who img, #join img {
	// 	width: 80%;
	// 	margin-left: 10%;
	// 	border: solid black 1px;
	// }

	#members h3 {
		color: rgb(26, 26, 26);
		font-family: "open sans";
	}

}

@media (max-width: 700px) {
	#teams h2, #who h2, #why h2, #what h2, #join h2 {
		font-size: 25px;
	}

	#teams li {
		font-size: 22px;
	}
	#teams ul {
		padding-left: 5px;
	}

	#who p, #why p, #what p, #join p {
		font-size: 15px;
		line-height: 18px;
	}

	#teams img, #who img, #what img, #join img {
		height: 150px;
	}

	#who img, #join img {
		width: 80%;
		margin-left: 10%;
		border: solid black 1px;
	}
	#members h3 {
		font-size: 20px;
	}
}
@media (max-width: 400px) {
	#teams h2, #who h2, #why h2, #what h2, #join h2 {
		font-size: 15px;
	}

	#teams li {
		font-size: 10px;
	}

	#teams img, #who img, #what img, #join img {
		height: 100px;
	}

	#who img, #join img {
		width: 80%;
		margin-left: 10%;
		border: solid black 1px;
	}
	#who p, #why p, #what p, #join p {
		font-size: 10px;
		line-height: 12px;
	}

	#members h3 {
		font-size: 15px;
	}
}

#members {
	background-color: #e2e2e2;
	padding-bottom: 25px;
}

#members h2 {
	color: rgb(26, 26, 26);
	text-align: center;
	font-weight: 600;
}

#members img {
	width: 200px;
	height: 200px;
}

#members div.ta-bio p {
	line-height: 18px;
}

#members div.ta-bio br {
	line-height: 20px;
}

#members div.ta-bio strong {
	font-weight: 500;
}

/* =============================================
				For Entrepreneurs
================================================ */
.ForEntrepreneurs {
	.subheader {
		background-image: url("/assets/img/headers/for_entrepreneurs.png");
	}
	section {
		margin-top: 0;
	}
}

/* =============================================
					Workspace
================================================ */

.Workspace {
	.subheader {
		background-image: url("/assets/img/headers/coworking.png");
	}
	.custom-grid {
		.well {
			background-color: white;
			border: none;

		}
		.row {
			height: 110px;
		}
		.media-middle {
			font-size: 14px;
			text-align: center;
			@include tablet {
				font-size: 14px;
			}
			@include mobile {
				font-size: 12px;
				float: right;
				width: 100px;
				margin-top: 0;
				line-height: 12px;
			}
		}
		img {
			height: 60px;
			width: 60px;
			@include tablet {

			}
			@include mobile {
				width:25px;
				height: 25px;
			}
		}
	}
	.rentals {
		.col-md-6 {
			padding-left: 0;
			padding-right: 0;
		}
		img {
			width: 90%;
			margin-bottom: 40px;
		}
	}
}

/* =============================================
				Team Alpha Services
================================================ */

.TeamAlphaServices {
	img {

	}

	.build {
		i {
			font-size: 8em;
			color: black;
			margin-bottom: 20px;
		}
	}
	h4 {
		font-size: 27px;
	}
}


/* =============================================
					Our Jobs
================================================ */
.Our, .OurJobs {
	margin-top: 50px;
	.container {
		padding-top: 50px;
	}
	legend {
		font-size: 34px;
		font-weight: bold;
		text-align: center;
	}
	h5 {
		font-size: 24px;
	}
	b {
		font-weight: 400;
		font-size: 20px;
		margin-bottom: 12px;
	}
	p, ul, li {
		font-size: 18px;
		line-height: 24px;
		margin-bottom: 10px;
	}
	@include mobile {
		p {
			text-align: justify;
			font-size: 14px;
			line-height: 20px;
		}
	}
	ul {
		padding-left: 20px;
	}
	.btn {
		font-size: 22px;
		font-weight: bold;
	}
}

/* =============================================
					CALENDAR
================================================ */

#calendar {
	h2 {
		color:black;
		font-family: "open sans";
		font-weight: 600;
		text-align: center;
	}

	h1 {
		text-align: center;
	}

	@include desktop {
		margin: auto;
		width: 80%;
	}

	@include tablet {
		margin: auto;
		width: 70%;
	}
}
/* ... */

